adding user routes
