# src/routes/userRoutes.ts
@@ -1,5 +1,10 @@
 import express from "express";
-import { register, login, getAllUsers } from "../controllers/userController";
+import {
+  register,
+  login,
+  getAllUsers,
+  getSingleUser,
+} from "../controllers/userController";
 import validateBody from "../middlewares/validateMiddleware";
 import {
   userLoginSchema,
@@ -12,5 +17,6 @@ const router = express.Router();
 router.get("/", authMiddleware, isAdmin, getAllUsers);
 router.post("/", validateBody(userRegisterSchema), register);
 router.post("/login", validateBody(userLoginSchema), login);
+router.get("/:id", authMiddleware, isAdmin, getSingleUser);
 
 export default router;
